Fetch and create the services list once, and only update the attributes of the existing services objects, rather than creating them each time. Assumptions: system services list is static.

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -216,7 +216,7 @@
                 </td>
                 <td style="max-width: 200px;" class="instance-col">
                   <div class="instance-wrapper">
-                    <div class="instance-num">
+                    <div>
                     <form {{action "changeInstances" service on="submit"}}>
                       {{input placeholder=service.requested maxlength="3" value=service.instancesInput class="system-services-instances-input" }}
                     </form>
