minor ui changes

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1458,8 +1458,8 @@
 
       <div class="panel">
       <div class="panel-head">
-
-          <div class="btn-group " style="margin-top: 4px; padding-bottom: 20px; width: 100%">
+        <div class="panel-title">Make a Request
+          <div class="btn-group" style="float: right">
             <div>
               <button style="border:0;padding-right:120px;" disabled="disabled" class="btn btn-blank">Instances Provisioned: {{actualInstances}}</button>
               <button style="border:0;" disabled="disabled" class="btn btn-blank">Instances Requested: </button>
@@ -1469,9 +1469,8 @@
               </button>
             </div>
           </div>
-          <br>
-
-        <div class="panel-title">Make a Request</div></div>
+        </div>
+      </div>
 
         <table style="width: 100%" class="top-aligned">
           <thead>
